Fix ZoomBar drag icon alignment

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/zoombar.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/zoombar.scss
@@ -3,12 +3,12 @@
   .component + .component {
     margin-top: 0.7rem;
   }
-  .anchored-element-wrap-rt &, .anchred-element-wrap-rb & {
+  .anchored-element-wrap-rt &, .anchored-element-wrap-rb & {
     .move-icon-wrap {
       text-align: right;
     }
   }
-  .anchored-element-wrap-lt &, .anchred-element-wrap-lb & {
+  .anchored-element-wrap-lt &, .anchored-element-wrap-lb & {
     .move-icon-wrap {
       text-align: left;
     }
